--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,1 +1,55 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Menu</title>
+    <link rel="stylesheet" href="index.css">
+</head>
+
+<body>
+    <header>
+        <h1>Our menu</h1>
+    </header>
+    <div class="container">
+        <div class="col-lg-4" id="p1">
+            <section>
+                <h3 id="h1">Chicken</h3>
+                <p>
+
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed
+                    cursus ante
+                    dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum.
+
+                </p>
+            </section>
+        </div>
+        <div class="col-lg-4" id="p2">
+            <section>
+                <h3 id="h2">Beef</h3>
+                <p>
+
+                    Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per conubia
+                    nostra, per
+                    inceptos himenaeos. Curabitur sodales ligula in libero. Sed dignissim lacinia nunc.
+
+                </p>
+            </section>
+        </div>
+        <div class="col-lg-4" id="p3">
+            <section>
+                <h3 id="h3">Sushi</h3>
+                <p>
+
+                    Curabitur tortor. Pellentesque nibh. Aenean quam. In scelerisque sem at dolor. Maecenas mattis. Sed
+                    convallis
+                    tristique sem. Proin ut ligula vel nunc egestas porttitor. Morbi lectus risus.
+
+                </p>
+            </section>
+        </div>
+    </div>
+</body>
+
+</html>
